--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,8 +5,9 @@ body{
     font-size: 16px;
     margin: 0;
     padding: 0;
-    
+
 }
+
 #container
 {
     width: 70%;
@@ -15,6 +16,26 @@ body{
     border: 1px solid #ddd;
     margin: 0 auto;
 }
+
+#cabecera
+{
+    background: #33a;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+
+}
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.0em;
+
+}
+
 #container h1
 {
     font-size: 20px;
